Dodata swagger dokumentacija
