# app/Http/Controllers/Api/HotelController.php
@@ -10,9 +10,33 @@ use Illuminate\Http\Request;
 class HotelController extends Controller
 {
     /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     *     path="/api/hotels",
+     *     tags={"Hotel"},
+     *     summary="Finds all hotels",
+     *     description="Multiple status values can be provided with comma separated string",
+     *     operationId="viewAllHotels",
+     *     @OA\Parameter(
+     *         name="status",
+     *         in="query",
+     *         description="Status values that needed to be considered for filter",
+     *         required=true,
+     *         explode=true,
+     *         @OA\Schema(
+     *             default="active",
+     *             type="string",
+     *             enum={"active", "inactive"} 
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation"
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid status value"
+     *     )
+     * )
      */
 
     public function index()
@@ -86,7 +110,7 @@ class HotelController extends Controller
         try {
             $hotel = Hotel::findOrFail($id);
             $hotel->delete();
-            return response()->json(["data"=> $hotel]);
+            return response()->json(["data" => $hotel]);
         } catch (\Exception $e) {
             return response()->json($e->getMessage());
         }
