# app/Http/Controllers/Api/MainCategoryController.php
@@ -10,25 +10,42 @@ use Illuminate\Http\Request;
 class MainCategoryController extends Controller
 {
     /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
+ * @OA\Get(
+ *     path="/api/main-categories",
+ *     tags={"MainCategory"},
+ *     summary="Finds all main categories",
+ *     description="Multiple status values can be provided with comma separated string",
+ *     operationId="viewAllMainCategories",
+ *     @OA\Parameter(
+ *         name="status",
+ *         in="query",
+ *         description="Status values that needed to be considered for filter",
+ *         required=true,
+ *         explode=true,
+ *         @OA\Schema(
+ *             default="active",
+ *             type="string",
+ *             enum={"active", "inactive"} 
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="successful operation"
+ *     ),
+ *     @OA\Response(
+ *         response=400,
+ *         description="Invalid status value"
+ *     )
+ * )
+ */
     public function index()
     {
         $mainCategories = MainCategory::with('media')->get();
         return response()->json(['data' => $mainCategories]);
     }
 
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
-     */
     public function store(Request $request)
     {
-        //return request()->all();
         try {
             $hotel = Hotel::findOrFail($request->input('hotel_id'));
             $validated = $request->validate([
